--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pxsstray"
-version = "0.0.1"
+dynamic = ["version"]
 authors = [
   { name="Sam Coulter", email="sam.w.coulter@gmail.com" },
 ]
@@ -33,3 +33,6 @@ Issues = "https://github.com/pypa/sampleproject/issues"
 
 [project.scripts]
 pxsstray = "pxsstray.main:run"
+
+[tool.setuptools_scm]
+version_file = "pxsstray/_version.py"
