--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dynamic = ["version"]
 authors = [
   { name="Sam Coulter", email="sam.w.coulter@gmail.com" },
 ]
-description = "A small example package"
+description = "A small utility that controls dpms and screensaver status from the tray"
 readme = "README.md"
 dependencies = [
   "pyside6",
@@ -29,8 +29,8 @@ classifiers = [
 # license-files = ["LICEN[CS]E*"]
 
 [project.urls]
-Homepage = "https://github.com/pypa/sampleproject"
-Issues = "https://github.com/pypa/sampleproject/issues"
+Homepage = "https://github.com/samwcoulter/pxsstray"
+Issues = "https://github.com/samwcoulter/pxsstray/issues"
 
 [project.scripts]
 pxsstray = "pxsstray.main:run"
